# secretleak

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.html
rules/: default_rules.yaml
src/: __init__.py  cli.py  config.py  filters.py  git_utils.py  hooks.py  models.py  redact.py  scanner.py
src/engines/: __init__.py  base.py  entropy_engine.py  regex_engine.py
src/output/: __init__.py  console.py  json_output.py  sarif.py
tests/: conftest.py  test_cli.py  test_entropy_engine.py  test_filters.py  test_output.py  test_redact.py  test_regex_engine.py  test_scanner.py
